meego-keyboard (0.5.32~1) unstable; urgency=low

  * [UNRELEASED]

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:23:00 +0200

meego-keyboard (0.5.31-1) unstable; urgency=low

  * Fixes: NB#231074, [FEA] Action key highlight in vkb (not for picker)
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:10:00 +0200

meego-keyboard (0.5.30-1) unstable; urgency=low

  * Fixes: NB#223273 - ± sign in virtual keyboard appends ± character for number content (Qt bug or IM bug?)
  * Fixes: NB#220954, With the vkb 'sym' view on the foreground,tapping on the 'done' button makes the layout to change before it gets closed.
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:54:49 +0200

meego-keyboard (0.5.29-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:50:39 +0200

meego-keyboard (0.5.28-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Thu, 24 Feb 2011 13:34:10 +0200

meego-keyboard (0.5.27-1) unstable; urgency=low

  * Fixes: NB#228917 - meego-keyboard provides dev package with missing dependencies

 -- huaming wang <huaming.wang@nokia.com>  Wed, 23 Feb 2011 16:16:40 +0200

meego-keyboard (0.5.26-1) unstable; urgency=low

  * Fixes: NB#218821 - With the VKB default language as English(UK), error correction and word completion are not working
  * Fixes: NB#222168 - libmeegotouch in can't uphold locked window orientation
  * Fixes: unwanted long presses in case of delays in event delivery

 -- huaming wang <huaming.wang@nokia.com>  Thu, 03 Feb 2011 13:18:26 +0200

meego-keyboard (0.5.25-1) unstable; urgency=low

  * New release

 -- huaming wang <huaming.wang@nokia.com>  Wed, 26 Jan 2011 10:29:53 +0200
