@@ -1,6 +1,7 @@
 meego-keyboard (0.5.32~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#233350, [TASK] E-mail/url specific virtual keyboard layouts
 
  -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:23:00 +0200
 
